--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.0.6"
+    "astro": "^4.0.6",
+    "i": "^0.3.7",
+    "the-new-css-reset": "^1.11.2"
+  },
+  "devDependencies": {
+    "sass": "^1.69.7"
   }
 }
